--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
 
+:root {
+  --main-color: #000000;
+  --text-color: #FFFFFF;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: var(--main-color);
+  color: var(--text-color);
+  font-family: 'Oxygen', sans-serif;
 }
 
 html, body, #root, #app {
@@ -23,4 +31,14 @@ code {
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
+}
+
+:root {
+  font-size: 16px;
+}
+@media screen and (max-width: 1000px) {
+  :root {
+    font-size: 12px;
+    text-align: center;
+  }
 }
