--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
+@font-face {
+  font-family: QARVIC;
+  src: url("/font/QARVIC.otf") format("opentype");
+}
+
+@font-face {
+  font-family: QARVIC;
+  font-weight: bold;
+  src: url("/font/QARVIC Bold.otf") format("opentype");
+}
+
 * {
   box-sizing: border-box;
 }
 
 :root {
-  --main-color: #000000;
+  --main-color: #061D38;
   --text-color: #FFFFFF;
+  --accent-color: #D949F6;
 }
 
 body {
@@ -16,7 +28,7 @@ body {
 
   background-color: var(--main-color);
   color: var(--text-color);
-  font-family: 'Oxygen', sans-serif;
+  font-family: QARVIC, sans-serif;
 }
 
 html, body, #root, #app {
